deploy/registry/local/ingress.yaml
#
# Copyright (c) 2018 Red Hat, Inc.
# This program and the accompanying materials are made
# available under the terms of the Eclipse Public License 2.0
# which is available at https://www.eclipse.org/legal/epl-2.0/
#
# SPDX-License-Identifier: EPL-2.0
#

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: che-plugin-registry
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: che-plugin-registry-crd-poc.192.168.39.101.nip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: che-plugin-registry
          servicePort: 8080
